disable right click on images

--- a/index.html
+++ b/index.html
@@ -77,77 +77,173 @@
       <div class="content">
         <div class="grid">
           <div class="grid-sizer"></div>
-          <div class="gutter-sizer"></div><a href="#modal-project-mad" class="grid-item"><img src="assets/images/work/MAD-2.jpg" alt="Musée des Arts Décoratifs"></a>
+          <div class="gutter-sizer"></div><a href="#modal-project-mad" class="grid-item">
+                <div><img src="assets/images/work/MAD-2.jpg" alt="Musée des Arts Décoratifs"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-project-mad" class="modal">
                 <div class="modal-content">
                   <h2>Musée des Arts Décoratifs</h2>
-                  <div class="close">Close</div><img src="assets/images/work/MAD-2.jpg"><img src="assets/images/work/MAD-1.jpg"><img src="assets/images/work/MAD-3.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/MAD-2.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/MAD-1.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/MAD-3.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-dejeuner" class="grid-item"><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></a>
+              </div><a href="#modal-dejeuner" class="grid-item">
+                <div><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-dejeuner" class="modal">
                 <div class="modal-content">
                   <h2>Déjeuner sur l'Herbe</h2>
-                  <div class="close">Close</div><img src="assets/images/work/dejeuner-sur-lherbe.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/dejeuner-sur-lherbe.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-toile-de-jouy" class="grid-item"><img src="assets/images/work/toile-de-jouy.png" alt="Toile de Jouy"></a>
+              </div><a href="#modal-toile-de-jouy" class="grid-item">
+                <div><img src="assets/images/work/toile-de-jouy.png" alt="Toile de Jouy"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-toile-de-jouy" class="modal">
                 <div class="modal-content">
                   <h2>Toile de Jouy</h2>
-                  <div class="close">Close</div><img src="assets/images/work/toile-de-jouy.png">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/toile-de-jouy.png"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-jethro" class="grid-item"><img src="assets/images/work/jethro-morris__mockup.jpg" alt="Jethro Morris"></a>
+              </div><a href="#modal-jethro" class="grid-item">
+                <div><img src="assets/images/work/jethro-morris__mockup.jpg" alt="Jethro Morris"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-jethro" class="modal">
                 <div class="modal-content">
                   <h2>Jethro Morris</h2>
-                  <div class="close">Close</div><img src="assets/images/work/jethro-morris__mockup.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/jethro-morris__mockup.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-verminoise" class="grid-item"><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></a>
+              </div><a href="#modal-verminoise" class="grid-item">
+                <div><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-verminoise" class="modal">
                 <div class="modal-content">
                   <h2>Verminoise</h2>
-                  <div class="close">Close</div><img src="assets/images/work/verminoise__pochette-avant.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/verminoise__pochette-avant.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-holispark" class="grid-item"><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></a>
+              </div><a href="#modal-holispark" class="grid-item">
+                <div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-holispark" class="modal">
                 <div class="modal-content">
                   <h2>Holispark</h2>
-                  <div class="close">Close</div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg"><img src="assets/images/work/holispark__totebags.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/holispark__totebags.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-balmonts" class="grid-item"><img src="assets/images/work/balmonts__mockup-front.jpg" alt="Balmonts"></a>
+              </div><a href="#modal-balmonts" class="grid-item">
+                <div><img src="assets/images/work/balmonts__mockup-front.jpg" alt="Balmonts"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-balmonts" class="modal">
                 <div class="modal-content">
                   <h2>Balmonts</h2>
-                  <div class="close">Close</div><img src="assets/images/work/balmonts__mockup-front.jpg"><img src="assets/images/work/balmonts__mockup-back.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/balmonts__mockup-front.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/balmonts__mockup-back.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-doomsnakes" class="grid-item"><img src="assets/images/work/collab__doomsnakes.jpg" alt="Collaboration with Manchester (UK) artist Doomsnakes"></a>
+              </div><a href="#modal-doomsnakes" class="grid-item">
+                <div><img src="assets/images/work/collab__doomsnakes.jpg" alt="Collaboration with Manchester (UK) artist Doomsnakes"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-doomsnakes" class="modal">
                 <div class="modal-content">
                   <h2>Collaboration with Manchester (UK) artist Doomsnakes</h2>
-                  <div class="close">Close</div><img src="assets/images/work/collab__doomsnakes.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/collab__doomsnakes.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-vampires" class="grid-item"><img src="assets/images/work/vampires-from-space.jpg" alt="Vampires from Space"></a>
+              </div><a href="#modal-vampires" class="grid-item">
+                <div><img src="assets/images/work/vampires-from-space.jpg" alt="Vampires from Space"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-vampires" class="modal">
                 <div class="modal-content">
                   <h2>Vampires from Space</h2>
-                  <div class="close">Close</div><img src="assets/images/work/vampires-from-space.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/vampires-from-space.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-shadow" class="grid-item"><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></a>
+              </div><a href="#modal-shadow" class="grid-item">
+                <div><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-shadow" class="modal">
                 <div class="modal-content">
                   <h2>Shadow of A</h2>
-                  <div class="close">Close</div><img src="assets/images/work/shadow-of-a.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/shadow-of-a.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-cave" class="grid-item"><img src="assets/images/work/cave.jpg" alt="Cave"></a>
+              </div><a href="#modal-cave" class="grid-item">
+                <div><img src="assets/images/work/cave.jpg" alt="Cave"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-cave" class="modal">
                 <div class="modal-content">
                   <h2>Cave</h2>
-                  <div class="close">Close</div><img src="assets/images/work/cave.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/cave.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
-              </div><a href="#modal-one-more-time" class="grid-item"><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></a>
+              </div><a href="#modal-one-more-time" class="grid-item">
+                <div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></div>
+                <div class="gotcha"></div></a>
               <div id="modal-one-more-time" class="modal">
                 <div class="modal-content">
                   <h2>One More Time with Feeling</h2>
-                  <div class="close">Close</div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg"><img src="assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg"><img src="assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg">
+                  <div class="close">Close</div>
+                  <div class="source">
+                    <div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
+                  <div class="source">
+                    <div><img src="assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg"></div>
+                    <div class="gotcha"></div>
+                  </div>
                 </div>
               </div>
         </div>
