--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                   </div>
                 </div>
               </div><a href="#modal-toile-de-jouy" class="grid-item">
-                <div><img src="assets/images/work/toile-de-jouy.png" alt="Toile de Jouy"></div>
+                <div><img src="assets/images/work/toile-de-jouy.jpg" alt="Toile de Jouy"></div>
                 <div class="gotcha"></div></a>
               <div id="modal-toile-de-jouy" class="modal">
                 <div class="modal-content">
                   <h2>Toile de Jouy</h2>
                   <div class="close">Close</div>
                   <div class="source">
-                    <div><img src="assets/images/work/toile-de-jouy.png"></div>
+                    <div><img src="assets/images/work/toile-de-jouy.jpg"></div>
                     <div class="gotcha"></div>
                   </div>
                 </div>
