--- a/index.html
+++ b/index.html
@@ -259,14 +259,20 @@
               </div>
         </div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
         <script>
           //- Masonry
           $(document).ready(function(){
-            $('.grid').masonry({
+            var $grid = $('.grid');
+            $grid.masonry({
               itemSelector: '.grid-item',
               columnWidth: '.grid-sizer',
               gutter: '.gutter-sizer',
-              percentPosition: true
+              percentPosition: true,
+              stagger: 30
+            });
+            $grid.imagesLoaded().progress( function() {
+              $grid.masonry('layout');
             });
           });
           
