--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
               columnWidth: '.grid-sizer',
               gutter: '.gutter-sizer',
               percentPosition: true,
-              stagger: 30
+              stagger: 30,
+              transitionDuration: '0.8s'
             });
             $grid.imagesLoaded().progress( function() {
               $grid.masonry('layout');
