--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
                closeModal();
              }     
           });
+          
         </script>
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cfde0b771ac267c40b7657119/14d085ef47b1eb6420cc509cb.js");</script>
       </div>
     </main>
     <footer>
