--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morganne Borowczyk | Home</title>
-    <meta description="Morganne Borowczyk is a French designer and illustrator">
+    <meta name="description" content="Morganne Borowczyk is a French designer and illustrator">
     <link rel="stylesheet" href="assets/style/css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
