Home : Title & description

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morganne Borowczyk | Home</title>
-    <meta name="description" content="Morganne Borowczyk is a French designer and illustrator">
+    <title>Morganne Borowczyk | Illustration &amp; Design portfolio</title>
+    <meta name="description" content="Gloomy illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags...">
     <link rel="stylesheet" href="assets/style/css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
