--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </header>
     <main class="container">
       <div class="content">
+        <h1>Illustrator & Designer from Lille, France</h1>
         <div class="grid">
           <div class="grid-sizer"></div>
           <div class="gutter-sizer"></div><a href="#modal-project-mad" class="grid-item">
