--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               
         </div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
-        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+        <script src="assets/js/imagesloaded.pkgd.min.js"></script>
         <script>
           //- Masonry
           $(document).ready(function(){
