put modals in js

--- a/index.html
+++ b/index.html
@@ -88,175 +88,31 @@
       <div class="content">
         <div class="grid">
           <div class="grid-sizer"></div>
-          <div class="gutter-sizer"></div><a href="#modal-project-mad" class="grid-item">
+          <div class="gutter-sizer"></div><a href="#modal-project-mad" data-modal="&lt;div id='modal-project-mad' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Musée des Arts Décoratifs&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/MAD-2.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/MAD-1.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/MAD-3.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/MAD-2.jpg" alt="Musée des Arts Décoratifs"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-project-mad" class="modal">
-                <div class="modal-content">
-                  <h2>Musée des Arts Décoratifs</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/MAD-2.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/MAD-1.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/MAD-3.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-dejeuner" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-dejeuner" data-modal="&lt;div id='modal-dejeuner' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Déjeuner sur l'Herbe&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/dejeuner-sur-lherbe.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/dejeuner-sur-lherbe.jpg" alt="Déjeuner sur l'Herbe"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-dejeuner" class="modal">
-                <div class="modal-content">
-                  <h2>Déjeuner sur l'Herbe</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/dejeuner-sur-lherbe.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-toile-de-jouy" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-toile-de-jouy" data-modal="&lt;div id='modal-toile-de-jouy' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Toile de Jouy&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/toile-de-jouy.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/toile-de-jouy.jpg" alt="Toile de Jouy"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-toile-de-jouy" class="modal">
-                <div class="modal-content">
-                  <h2>Toile de Jouy</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/toile-de-jouy.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-jethro" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-jethro" data-modal="&lt;div id='modal-jethro' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Jethro Morris&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/jethro-morris__mockup.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/jethro-morris__mockup.jpg" alt="Jethro Morris"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-jethro" class="modal">
-                <div class="modal-content">
-                  <h2>Jethro Morris</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/jethro-morris__mockup.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-verminoise" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-verminoise" data-modal="&lt;div id='modal-verminoise' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Verminoise&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/verminoise__pochette-avant.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/verminoise__pochette-avant.jpg" alt="Verminoise"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-verminoise" class="modal">
-                <div class="modal-content">
-                  <h2>Verminoise</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/verminoise__pochette-avant.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-holispark" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-holispark" data-modal="&lt;div id='modal-holispark' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Holispark&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/holispark__tshirt__cut-the-rope.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/holispark__totebags.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg" alt="Holispark"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-holispark" class="modal">
-                <div class="modal-content">
-                  <h2>Holispark</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/holispark__tshirt__cut-the-rope.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/holispark__totebags.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-balmonts" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-balmonts" data-modal="&lt;div id='modal-balmonts' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Balmonts&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/balmonts__mockup-front.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/balmonts__mockup-back.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/balmonts__mockup-front.jpg" alt="Balmonts"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-balmonts" class="modal">
-                <div class="modal-content">
-                  <h2>Balmonts</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/balmonts__mockup-front.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/balmonts__mockup-back.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-doomsnakes" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-doomsnakes" data-modal="&lt;div id='modal-doomsnakes' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Collaboration with Manchester (UK) artist Doomsnakes&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/collab__doomsnakes.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/collab__doomsnakes.jpg" alt="Collaboration with Manchester (UK) artist Doomsnakes"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-doomsnakes" class="modal">
-                <div class="modal-content">
-                  <h2>Collaboration with Manchester (UK) artist Doomsnakes</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/collab__doomsnakes.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-vampires" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-vampires" data-modal="&lt;div id='modal-vampires' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Vampires from Space&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/vampires-from-space.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/vampires-from-space.jpg" alt="Vampires from Space"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-vampires" class="modal">
-                <div class="modal-content">
-                  <h2>Vampires from Space</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/vampires-from-space.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-shadow" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-shadow" data-modal="&lt;div id='modal-shadow' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Shadow of A&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/shadow-of-a.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/shadow-of-a.jpg" alt="Shadow of A"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-shadow" class="modal">
-                <div class="modal-content">
-                  <h2>Shadow of A</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/shadow-of-a.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-cave" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-cave" data-modal="&lt;div id='modal-cave' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;Cave&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/cave.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/cave.jpg" alt="Cave"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-cave" class="modal">
-                <div class="modal-content">
-                  <h2>Cave</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/cave.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div><a href="#modal-one-more-time" class="grid-item">
+                <div class="gotcha">   </div></a><a href="#modal-one-more-time" data-modal="&lt;div id='modal-one-more-time' class='modal'&gt;&lt;div class='modal-content'&gt;&lt;h2&gt;One More Time with Feeling&lt;/h2&gt;&lt;div class='close' title='close'&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='source'&gt;&lt;div&gt;&lt;img src='assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg'&gt;&lt;/div&gt;&lt;div class='gotcha'&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;" class="grid-item">
                 <div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg" alt="One More Time with Feeling"></div>
-                <div class="gotcha"></div></a>
-              <div id="modal-one-more-time" class="modal">
-                <div class="modal-content">
-                  <h2>One More Time with Feeling</h2>
-                  <div class="close">Close</div>
-                  <div class="source">
-                    <div><img src="assets/images/work/one-more-time-with-feeling__an-act-of-revenge.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/one-more-time-with-feeling__women-are-like-fucking-3d.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                  <div class="source">
-                    <div><img src="assets/images/work/one-more-time-with-feeling__girl-in-amber.jpg"></div>
-                    <div class="gotcha"></div>
-                  </div>
-                </div>
-              </div>
+                <div class="gotcha">   </div></a>
         </div>
         <script src="assets/js/masonry.pkgd.min.js"></script>
         <script>
@@ -275,32 +131,32 @@
         <script>
           //- Trigger modals
           $('.grid-item').on('click', function(){
-            var modalTarget = $(this).attr('href');
-            console.log(modalTarget);
-            $(modalTarget).addClass('ready');
+            var modalTarget = $(this).attr('data-modal');
+            $('body').append(modalTarget);
             setTimeout(function(){
-              $(modalTarget).addClass('visible');
+              $('.modal').addClass('visible');
             },50);
-            $('body').addClass('stuck');
           });
           //- Close modals
           function closeModal() {
             $('.modal').removeClass('visible');
             setTimeout(function(){
-              $('.modal').removeClass('ready');
+              $('.modal').remove();
             },100);
             $('body').removeClass('stuck');
           }
           //--- Click close
-          $('.modal .close').on('click', function(){
+          $('body').on('click', '.modal .close', function(){
+            console.log('close');
             closeModal();
           });
           //--- Click outside
-          $('.modal').on().click(function (event) {
-             if(!$(event.target).closest('.modal-content').length && !$(event.target).is('.modal-content')) {
-               closeModal();
-             }     
-          });
+          $('body').on('click', '.modal', function(event) {
+            console.log('close');
+            if(!$(event.target).closest('.modal-content').length && !$(event.target).is('.modal-content')) {
+              closeModal();
+            }     
+          });  
         </script>
       </div>
     </main>
